// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> SearchBar - inverse theme 1`] = `
<div
  className="searchbar searchbar-inverse"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      id={undefined}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      className="icon searchbar-icon icon-size-20"
      height="32"
      viewBox="0 0 18 18"
      width="32"
    >
      <path
        d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </form>
</div>
`;

exports[`<SearchBar /> SearchBar - with one additional button 1`] = `
<div
  className="searchbar"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      id={undefined}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      className="icon searchbar-icon icon-size-20"
      height="32"
      viewBox="0 0 18 18"
      width="32"
    >
      <path
        d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-default"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar - with two additional buttons 1`] = `
<div
  className="searchbar"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      id={undefined}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      className="icon searchbar-icon icon-size-20"
      height="32"
      viewBox="0 0 18 18"
      width="32"
    >
      <path
        d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-primary"
    >
      Submit
    </button>
    <button
      className="btn btn-default"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar 1`] = `
<div
  className="searchbar"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      id={undefined}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      className="icon searchbar-icon icon-size-20"
      height="32"
      viewBox="0 0 18 18"
      width="32"
    >
      <path
        d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </form>
</div>
`;
